# dsar-orchestrator

./: .gitignore  .importlinter  .ralph-loop-prompt.md  CHANGELOG.md  CLAUDE.md  README.md  VERSIONING.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.json
.claude/hooks/: stage-edit-reminder.sh
.github/workflows/: docs-lint.yml  runbook-drift.yml
docs/: durant-doc-lint.yaml  durant-test.md  operator-guide.md
docs/audit_schemas/: pipeline.schema.json
docs/runbooks/: RELEASE_TEMPLATE.md  dsar-operator-loop.md  ralph-dsar-prompt.md  status-dashboard-people-register.sh.snippet
src/dsar_orchestrator/: __init__.py  audit.py  cli.py  config.py  exceptions.py  hash_chain.py  module_agents.py  operator_console.py  pipeline.py  register.py  stages.py  subprocess_env.py  verify.py
tests/: conftest.py  test_action_queue.py  test_adapter_bake.py  test_adapter_detect_2_1_to_2_4.py  test_adapter_embed.py  test_adapter_export.py  test_adapter_ingest.py  test_adapter_people_register.py  test_adapter_pii_classify.py  test_adapter_redact.py  test_adapter_redact_verify.py  test_adapter_rerank.py  test_adapter_scope_classify.py  test_adapter_scope_prefilter.py  test_adapter_verify_pdf.py  test_adapter_verify_spec.py  test_audit.py  test_audit_chain.py  test_block_gate.py  test_canonical_projection.py  test_check_durant_doc.py  test_cli.py  test_cli_subparsers.py  test_closure_letter.py  test_compensating_failure_event.py  test_conductor_fitness_preflight.py  test_config.py  test_context_classify_mini.py  test_contract_b_no_fictional_modules.py  test_dsar_approver.py  test_durant_calibration.py  test_durant_pass.py  test_durant_prompt_provenance.py  test_durant_recheck.py  test_extraction_quality_gate.py  test_flag_review.py  test_flag_review_instance.py  test_hash_chain.py  test_live_log_pii_regression.py  test_live_log_projection.py  (+28 more)
tests/_toolkit_stubs/: __init__.py  stubs.py
tools/: check_durant_doc.py  check_runbook_drift.py
(+84 files in other folders)
